# cataclop

./: .dockerignore  .env.dist  .gitignore  Dockerfile  INSTALL.md  Pipfile  README.md  docker-compose.override.dev.yml  docker-compose.yml  entrypoint.sh  manage.py  package-lock.json  package.json  pyproject.toml
cataclop/: celery.py  settings.dist.py  settings.py  settings.py.dist  urls.py  wsgi.py
cataclop/api/: apps.py  auth.py  decorators.py  (+5 more)
dash/: app.py
docker/: entrypoint.sh  ipython_config.py  uwsgi.ini
notebooks/: APPRENTIS_LADS_JOCKEYS_AUTOSTART_45return.ipynb  Untitled-Copy1.ipynb  Untitled.ipynb  Untitled1.ipynb  Untitled10.ipynb  Untitled11.ipynb  Untitled2.ipynb  Untitled3.ipynb  Untitled4.ipynb  Untitled5.ipynb  Untitled6.ipynb  Untitled7.ipynb  Untitled8-Copy1.ipynb  Untitled8.ipynb  Untitled9.ipynb  balphagore.1.ipynb  balphagore.2.ipynb  balphagore.3.ipynb  bootstrap-Copy1.ipynb  bootstrap-Copy2.ipynb  bootstrap.ipynb  course_a_condition_40return.ipynb  dataset-exploration.ipynb  default_predict-Copy1.ipynb  default_predict.ipynb  default_train-Copy1.ipynb  default_train-Copy2.ipynb  default_train.ipynb  enrich.ipynb  exploration.ipynb  ffff-Copy1.ipynb  ffff.ipynb  handicap_30return.ipynb  ipython_config.py  keras_nn_pairs-Copy1.ipynb  keras_nn_pairs-Copy2.ipynb  keras_nn_pairs.ipynb  keras_nn_pairs_test.ipynb  onboarding.ipynb  pred sum COURSE_A_CONDITIONS 0.8.ipynb  (+16 more)
scripts/: app.py  archive.sh  bet.js  bet.pmu.js  bet.unibet.js  bet_config.json.dist  better.sh  live.js  live_config.json.dist  morning_scrapper.sh  parse.sh  scrapper.sh
(+132 files in other folders)
